# etl-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/etl/: __init__.py  config.py  extract.py  load.py  models.py  transform.py
tests/: test_transform.py
