[project]
name = "etl-pipeline"
version = "0.1.0"
description = "USGS earthquake ETL pipeline: extract -> transform -> load into a local SQLite database."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "tenacity>=9.0",   # retry/backoff for the extract client (added later)
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
